# ET_Agent

./: .dockerignore  .env.example  .gitignore  1. 2024년3회_정보처리기사필기기출문제_cut_left_column.txt  1. 2024년3회_정보처리기사필기기출문제_cut_right_column.txt  1. 2024년3회_정보처리기사필기기출문제_left_column.txt  1. 2024년3회_정보처리기사필기기출문제_right_column.txt  2025년 1회_only_left_column.txt  2025년 1회_only_right_column.txt  Dockerfile  README.md  debug_pdf_parsing.py  debug_prompt.py  docker-compose.override.yml  docker-compose.yml  donut_test.py  extract_pdf_text.py  extracted_chunks.txt  extracted_columns_info.txt  extracted_full_text.txt  extracted_left_column.txt  extracted_pdf_text.txt  extracted_right_column.txt  korean_dict.txt  langgraph.json  main.py  mini_server.py  pdfplumber_1. 2024년3회_정보처리기사필기기출문제_cut_problems.json  pdfplumber_2025년 1회_only_problems.json  pyproject.toml  quick_test.py  ragas_test_Database Construction_20250828_134434.json  ragas_test_Database Construction_20250828_134828.json  ragas_test_Database Construction_20250828_140439.json  ragas_test_Database Construction_20250828_141913.json  ragas_test_Database Construction_20250829_102755.json  ragas_test_Database Construction_20250829_103027.json  ragas_test_Programming Language Utilization_20250828_134451.json  ragas_test_Programming Language Utilization_20250828_134848.json  ragas_test_Programming Language Utilization_20250828_140442.json  (+25 more)
common/short_term/: redis_memory.py
data/redis/: dump.rdb
farmer/: OchestratorTest.py  Streamlit_OchestratorTest.py  pyproject.toml  region_map.csv  regions.csv  warn_regions.csv
farmer/faiss_crop_fer_db/: index.faiss  index.pkl
farmer/faiss_crop_guide_db/: index.faiss  index.pkl
farmer/faiss_crop_pest_db/: index.faiss  index.pkl
farmer/faiss_kma_db/: index.faiss  index.pkl
farmer/sales/: SalesAgent.py  SalesAgentTest.py  info_20240812.csv
farmer/작물추천/: .txt  agent_workflow.mmd  chathistory.py  chathistory0829.py  crop65pdfllm.py  crop65pdfrag.py  evaluation_report.json  goldenset_test.py  goldenset_test_vector.py  graphtest.py  index_build_graph.mmd  milvus_agent_workflow.md  milvusdb_crop65llm.py  milvusdb_crop65rag.py  test0812_복사본.py  used_context_log.txt
farmer/작물추천/Crop Recommedations DB/: sample1_joined_1.csv
farmer/작물추천/Goldenset_test/: Goldenset_test1.csv  evaluation_report.json  goldenset_test.py  llm.txt  llm1.txt  llm2.txt  llm3.txt  llm4.txt  llm5rag.txt  llmrag  sample1.csv
farmer/작물추천/Goldenset_test/logs/: used_context_log_20250820_160750.txt  used_context_log_20250822_085750.txt
farmer/작물추천/csv_change_need/: folder_to_pdf_cli.py  test.xlsx
farmer/작물추천/faiss_pdf_db/: index.faiss  index.pkl  manifest.json
farmer/작물추천/milvusdb_crop65llm_logs/: conversation_log_20250827_162327.json  conversation_log_20250827_164246.json  conversation_log_20250827_171445.json  conversation_log_20250827_171606.json
farmer/작물추천/ragas/: app_streamlit.py  ragas wonbon.py  ragas_use.py
farmer/재배방법/: 1-1crop_grow.py  1-1crop_grow_validation.py  1-2crop_recommendation.py  1-3crop_infection copy.py  1-3crop_infection.py  1-3crop_infection_validation.py  1-4crop_fertilizer.py  1-5crop_pesticide.py  10.RAGAS_test.py  2cropgrow_web.py  3streamlit_webapp.py  4.crop_overall.py  4.cropgrow_agent_streamlit.py  4.cropgrow_streamlit.py  5.DB_API_answermix.py  6.analyzing_crop_pdf.py  6.streamlit_test.py  7.Milvus.py  7.Milvus_csv.py  7.pdf_bgem3.py  8.Milvus_QA.py  9.cropgrow_agent_edit.py  crop_overall.py  pyproject.toml
farmer/재해대응/: crop65pdfllm.py  crop65pdfrag.py  goldensettest.py  shortlast.py  verification1.py  verification2.py  verification_search.py  골든셋.csv  재해대응_OCR.py  주혁_RAG.py
teacher/: cut_1. 2024년1회_정보처리기사필기기출문제_left_column.txt  cut_1. 2024년1회_정보처리기사필기기출문제_right_column.txt  cut_1. 2024년3회_정보처리기사필기기출문제_left_column.txt  cut_1. 2024년3회_정보처리기사필기기출문제_right_column.txt  cut_2. 2024년2회_정보처리기사필기기출문제_left_column.txt  cut_2. 2024년2회_정보처리기사필기기출문제_right_column.txt  cut_2. 2025년1회_정보처리기사필기기출문제_right_column.txt  cut_2022년1회_기사필기 기출문제_left_column.txt  cut_2022년1회_기사필기 기출문제_right_column.txt  cut_2022년2회_기사필기 기출문제_left_column.txt  cut_2022년2회_기사필기 기출문제_right_column.txt  cut_2022년3회_기사필기 기출문제_left_column.txt  cut_2022년3회_기사필기 기출문제_right_column.txt  cut_2023년 1회_기사필기 기출문제_left_column.txt  cut_2023년 1회_기사필기 기출문제_right_column.txt  cut_2023년 2회_기사필기 기출문제_left_column.txt  cut_2023년 2회_기사필기 기출문제_right_column.txt  cut_2023년 3회_기사필기 기출문제_left_column.txt  cut_2023년 3회_기사필기 기출문제_right_column.txt  cut_3. 2025년2회_정보처리기사필기기출문제_left_column.txt  cut_3. 2025년2회_정보처리기사필기기출문제_right_column.txt  exam_parser.py  file_path_mapper.py  graph.py  langgraph.json  old_test.py  pdf_preprocessor.py  pdf_preprocessor_ai.py  streamlit_app.py  teacher.py  teacher_graph.py  teacher_graph_backup.py  teacher_graph_visual.py  teacher_nodes.py  teacher_util.py  test_form_interrupt_flow.py  test_partial_exam_input.json  test_solution_file_path.py  test_teacher_graph_solution_interrupt.py  unified_pdf_preprocessor.py
teacher/TestGenerator/: config.py  main.py  pdf-quiz-GPT-OSS-20b.py  pdf-quiz-groq-GPT-OSS.py  pdf-quiz-groq-nofilter.py  pdf-quiz-rag.py  pdf-quiz-rag3.py  pdf_quiz_groq.py  정보처리기사_50문제_Groq_중급_20250806_171639.json
teacher/agents/: __init__.py  base_agent.py
teacher/exam/: 2022년1회_기사필기 기출문제_전체문제.txt  2024년3회_기사필기_전체문제.json  2025년1회_기사필기_전체문제.json  2_ 2024년2회_정보처리기사필기기출문제_전체문제.txt  txt2json_generation-기출.py  txt2json_generation-기출2.py
teacher/nodes/: extractor.py  search.py
teacher/retrieve/: retrieve.py
teacher/solution/: agent_workflow.md  app.py  file_store.py  json2pdf_generation.py  pdf_generation_userSample.py  sample_pre.json  sample_user.json  solution_agent.py  solution_results_20250813_102833.json  user_problems_json.json
teacher/test_sample/: analysis_sample.json  analysis_sample2.json  analysis_sample2_analysis_result.json  score_sample.json  (+3 more)
(+175 files in other folders)
