[project]
name = "llm-T"
version = "0.1.0"
description = "PDF 기반 객관식 문제 자동 출제 시스템 (RAG + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-core",
    "langchain",
    "langgraph",
    "langserve",
    "httpx<0.28",
    # 서버 실행 의존성 (Dockerfile 초기 pip 사전 설치 제거했으므로 프로젝트 의존성에 포함)
    "fastapi",
    "uvicorn[standard]",
    "pypdf[crypto]",
    "ddgs",
    "python-dotenv",
    "langchain-community",
    "langchain-core",
    "openai",
    "redis",
    "streamlit",
    "wikipedia",
    "langchain-huggingface",
    "langchain-milvus",
    "langchain-openai",
    "opencv-python",
    "pillow",
    "pymilvus",
    "pytesseract",
    "reportlab",
    "faiss-cpu",
    "tiktoken",
    "numpy",
    "requests",
    "anyio",
    "langchain-groq",
    "graphviz",
    "groq",
    "docling",
    "protobuf",
    "huggingface-hub[hf-xet]",
    "sse-starlette",
    "pdfminer.six",
    "pydantic",
    "pdfplumber",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "farmer", "teacher"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]
