[project]
name = "eejang"
version = "0.1.0"
description = "농업 정보 제공 RAG 시스템 (작물 추천, 재해 대응, 판매 지원)"
authors = [
    { name = "ETRI", email = "etri@example.com" }
]
requires-python = ">=3.9"

dependencies = [
    # --- 핵심 라이브러리 ---
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "konlpy>=0.6.0",
    "python-dateutil>=2.9.0",
    "docx2txt>=0.8",
    "tabulate>=0.9.0",

    # --- 벡터 데이터베이스 ---
    "faiss-cpu>=1.8.0",
    "pymilvus>=2.4.0",

    # --- LangChain & LangGraph 생태계 ---
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.2",
    "langchain-experimental>=0.3.4",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.1.0",
    "langsmith>=0.4.3",
    
    # --- LLM & 검색 API & 트랜스포머 ---
    "groq>=0.9.0",
    "tavily-python>=0.3.0",
    "sentence-transformers>=2.0.0",
    "transformers>=4.40.0",
    "wikipedia>=1.4.0",
    
    # --- 유효성 검사 & 데이터 모델 ---
    "pydantic>=2.0.0",
    
    # --- PDF & 웹 스크레이핑 & OCR ---
    "pypdf>=4.2.0",
    "PyMuPDF>=1.24.1",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",  # bs4
    "easyocr>=1.7.0",
    "Pillow>=10.3.0",
    "torch>=2.0.0",

    # --- UI 프레임워크 & 시각화 ---
    "streamlit>=1.30.0",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # --- API 서버 (LangServe) ---
    "langserve>=0.3.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sales", "작물추천", "재배방법", "재해대응"]